Fixing small height and spacing issues

--- a/packages/nouns-webapp/src/components/DiatomInfo/HowItWorks.module.css
+++ b/packages/nouns-webapp/src/components/DiatomInfo/HowItWorks.module.css
@@ -35,6 +35,8 @@
   font-size: 1rem;
   text-align: right;
   font-weight: 500;
+
+  margin: 1.5rem 0 .5rem;
 }
 
 .content h3 {
