--- a/packages/nouns-webapp/src/components/Footer/Footer.module.css
+++ b/packages/nouns-webapp/src/components/Footer/Footer.module.css
@@ -29,6 +29,8 @@
   color: black;
   margin: 0 5px;
 
+  max-height: 62px;
+
   width: fit-content;
 }
 
